# gen-study

./: .gitignore  CMakeLists.txt
src/: main.c
tests/: CMakeLists.txt  ctest.h  main.c
